<resources>
    <string name="app_name">AUST BUDDY</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="onboard_1_para">Finding notes and exam questions can be pretty \n hectic sometimes. No more worries about those \n find your notes organized and top the exam.</string>
    <string name="find_your_notes">Find Your Notes</string>
    <string name="onboarding_2_para">No more waiting for the university to publish your \n result calculate your own CGPA at ease and \n pave your way to the success.</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="other_features">Other Features</string>
    <string name="hodo">hodo</string>
    <string name="nothing_is_perfect">NOTHING IS PERFECT</string>
    <string name="onboarding_para_3">Other exciting things you can find <br> HElo hi</br> Know how to take the perfect preparation ? Just request for anything to take the perfect preparation.</string>
    <string name="get_started">Get Started</string>
    <string name="finish">Finish</string>
    <string name="get_started_welcome">GET STARTED</string>
    <string name="clubs">Clubs</string>
    <string name="request">Request</string>
    <string name="material">Material</string>
    <string name="events">Events</string>
    <string name="cgpa">CGPA</string>
    <string name="syllabus">Syllabus</string>
    <string name="calender">Calender</string>
    <string name="gradings">Gradings</string>
    <string name="podo">TODO</string>
    <string name="teachers">Teachers</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Course</string>
    <string name="notice">Notice</string>
    <string name="schedule">Schedule</string>
    <string name="course_fragment">Course Fragment</string>
    <string name="notice_fragment">Notice Fragment</string>
    <string name="schedule_fragment">Schedule Fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="settings">Settings</string>
    <string name="help_and_support">Help and Support</string>
    <string name="textview">TextView</string>
    <string name="about_devs">About Devs</string>
    <string name="user_name">User Name: </string>
    <string name="oppo">TODO</string>
    <string name="yet_to_be_done">YET TO BE DONE</string>
    <string name="button">Button</string>
    <string name="calculate_your_cgpa">Calculate Your CGPA</string>
    <string name="name">Name</string>
    <string name="calculate">Calculate</string>
    <string-array name="Credits">
        <item>3.00</item>
        <item>1.50</item>
        <item>0.75</item>
    </string-array>
    <string-array name="Grades">
        <item>A+  80% or above</item>
        <item>A   75% to less than 80%</item>
        <item>A-  70% to less than 75%</item>
        <item>B+  65% to less than 70%</item>
        <item>B   60% to less than 65%</item>
        <item>B-  55% to less than 60%</item>
        <item>C+  50% to less than 55%</item>
        <item>C   45% to less than 50%</item>
        <item>D   40% to less than 45%</item>
        <item>F   Less than 40%</item>
    </string-array>
    <string-array name="Semesters">
        <item>1st Year 1st Semester</item>
        <item>1st Year 2nd Semester</item>
        <item>2nd Year 1st Semester</item>
        <item>2nd Year 2nd Semester</item>
        <item>3rd Year 1st Semester</item>
        <item>3rd Year 2nd Semester</item>
        <item>4th Year 1st Semester</item>
        <item>4th Year 2nd Semester</item>
    </string-array>
    <string-array name="departments">
        <item>Department</item>
        <item>CSE</item>
        <item>EEE</item>
        <item>CE</item>
        <item>ME</item>
        <item>TE</item>
        <item>IPE</item>
        <item>BBA</item>
        <item>Arch</item>
    </string-array>
    <string-array name="years">
        <item>Year</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string-array name="semester12">
        <item>Semester</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="select">Select</string>
    <string name="autoCompleteTextView">AutoCompleteTextView</string>
    <string name="reset">Reset</string>
    <string name="credit">Credit</string>
    <string name="please_select_your_semester_above">Please select your semester above</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="drive_link">Drive Link</string>
    <string name="explore">Explore</string>
    <string name="to">To:</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="send">SEND</string>
    <string name="iums">IUMS</string>
    <string name="aust_oj">AUST OJ</string>
    <string name="add">Add </string>
    <string name="close">Close </string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_syllabus">Quiz Syllabus</string>
    <string name="a_dot">.</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="email">Email: </string>
    <string name="contact_no">Contact no</string>
    <string name="details_about_your_announcement">Details about your announcement</string>
    <string name="select_category">Select Category</string>
    <string name="section">Section: </string>
    <string name="on_boarding_image">On Boarding Image</string>
    <string name="select_topic">Select Topic</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="book_name">Book Name</string>
    <string name="book_writer_name">Book Writer Name</string>
    <string name="book_image">Book Image</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="quiz_date">Quiz Date</string>
    <string name="phone">phone</string>
    <string name="id">Id</string>
    <string name="semester">Semester: </string>
    <string name="update_semester">Update Semester</string>
    <string name="department">Department: </string>
    <string name="session">Session: </string>
    <string name="student_id">Student ID: </string>
    <string name="admission_session">Admission Session</string>
    <string name="continue_string">Continue</string>
</resources>