<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout style="@style/backgroundCard">


        <LinearLayout style="@style/layoutMatchMatchHorizontal">

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/layoutMatchMatchVertical"
                android:layout_width="195dp">

                <TextView
                    android:id="@+id/productNameCard"
                    style="@style/textViewWrapWrapPoppinsBlack18"
                    android:text="@string/book_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/productAuthorNameCard"
                    style="@style/textViewWrapWrapPoppinsBlack18"
                    android:text="@string/book_writer_name" />


                <LinearLayout style="@style/layoutMatchMatchHorizontal">

                    <TextView
                        android:id="@+id/productCategoryCard"
                        style="@style/textViewWrapWrapPoppinsBlack18"
                        android:text="@string/category">

                    </TextView>

                    <TextView
                        android:id="@+id/productPriceCard"
                        style="@style/textViewWrapWrapPoppinsBlack18"
                        android:text="@string/price" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10sp"
                android:contentDescription="@string/book_image"
                android:padding="5sp"
                android:src="@drawable/ic_baseline_menu_book_24" />

        </LinearLayout>

        <LinearLayout style="@style/layoutMatchMatchHorizontal">

            <Button
                android:id="@+id/showDetailsButton"
                style="@style/buttonStyleCard"
                android:text="@string/details" />

            <Button
                android:id="@+id/deleteProductButton"
                style="@style/buttonStyleCard"
                android:text="@string/delete" />

            <Button
                android:id="@+id/updateProductButton"
                style="@style/buttonStyleCard"
                android:text="@string/update" />
        </LinearLayout>

    </LinearLayout>

</layout>

