<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bot_nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />


    <item
        android:id="@+id/bot_nav_courses"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/course" />


    <item
        android:id="@+id/bot_nav_schedule"
        android:icon="@drawable/ic_baseline_access_time_24"
        android:title="@string/schedule" />

    <item
        android:id="@+id/bot_nav_store"
        android:icon="@drawable/ic_baseline_swap_vert_24"
        android:title="Store" />
    <item
        android:id="@+id/bot_nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>