<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout style="@style/backgroundCard">

        <LinearLayout style="@style/layoutMatchParentHorizontal">

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/layoutMatchWrapVertical"
                android:layout_width="200dp">

                <TextView
                    android:id="@+id/taskNameCard"
                    style="@style/textViewWrapWrapPoppinsBlackGravityStart"
                    android:text="@string/quiz_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/taskDateCard"
                    style="@style/textViewWrapWrapPoppinsBlackGravityStart"
                    android:text="@string/quiz_date" />


                <TextView
                    android:id="@+id/taskDescriptionCard"
                    style="@style/textViewWrapWrapPoppinsBlackGravityStart"
                    android:text="@string/quiz_syllabus"
                    android:textSize="18sp">

                </TextView>

            </LinearLayout>

            <LinearLayout style="@style/layoutMatchParentVertical">

                <Button
                    android:id="@+id/btnDeleteSchedule"
                    style="@style/buttonStylePopup"
                    android:text="@string/done" />

                <Button
                    android:id="@+id/btnEditSchedule"
                    style="@style/buttonStylePopup"
                    android:text="@string/edit" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</layout>
