<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_add_item_for_sell"
    style="@style/backgroundCard"
    tools:context=".features.plazaTab.DialogAddAnnouncement">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="@color/primary_green">

    </LinearLayout>

    <TextView
        android:id="@+id/textView_title"
        style="@style/textViewWrapWrapPoppinsBlack20"
        android:padding="20sp"
        android:text="@string/announcement" />

    <LinearLayout
        style="@style/layoutMatchWrapVertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_category"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:layout_gravity="start"
            android:text="@string/select_category" />

        <Spinner
            android:id="@+id/topic_spinner_category"
            style="@style/spinnerModeDropDown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_topic_layout"
        style="@style/layoutMatchWrapVertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView_sub_category"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:layout_gravity="start"
            android:text="@string/select_topic" />

        <Spinner
            android:id="@+id/topic_spinner_sub_category"
            style="@style/spinnerModeDropDown" />
    </LinearLayout>


    <EditText
        android:id="@+id/postersContactNo"
        style="@style/normalTextInput"
        android:hint="@string/contact_no"
        android:inputType="phone" />


    <EditText
        android:id="@+id/announcementDetails"
        style="@style/normalTextInput"
        android:hint="@string/details_about_your_announcement"
        android:inputType="textShortMessage" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddButton"
        style="@style/buttonStylePopup"
        android:layout_width="match_parent"
        android:fontFamily="@font/poppins_black"
        android:text="@string/add" />


</LinearLayout>

