<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutMatchMatch"
    android:background="@drawable/onboarding_vector"
    android:layout_height="500dp"
    >



    <LinearLayout style="@style/layoutOnBoardingMain">


        <ImageView
            style="@style/onBoardingImage"
            android:contentDescription="@string/on_boarding_image"
            />

        <TextView
            android:id="@+id/on_boarding_1_title"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:text="@string/find_your_notes"
            android:textSize="30sp"
            android:textFontWeight="600"/>

        <TextView
            android:id="@+id/onboard_1_para"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:padding="20dp"
            android:text="@string/onboard_1_para"
            android:textAlignment="center" />

        <Button
            android:id="@+id/onboard_1_button"
            style="@style/wrapWrapDarkElevatedButtonWithPadding"
            android:text="@string/continue_string"
            android:textStyle="bold"
            android:textSize="18sp"
            />


    </LinearLayout>

</LinearLayout>