<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutMatchMatch">

    <LinearLayout style="@style/layoutOnBoardingMain">

        <ImageView
            style="@style/onBoardingImage"
            app:srcCompat="@drawable/calcu_onboarding2"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/on_boarding_image"/>

        <TextView
            android:id="@+id/onboarding_3_title"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:text="@string/calculate_cgpa"
            android:textSize="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:textFontWeight="600"/>

        <TextView
            android:id="@+id/onboarding_3_para"
            style="@style/textViewWrapWrapPoppinsBlack"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/onboarding_2_para"
            android:textAlignment="center" />

        <Button
            android:id="@+id/onboarding_2_button"
            style="@style/wrapWrapDarkElevatedButtonWithPadding"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/continue_string" />
    </LinearLayout>

</LinearLayout>