<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_edit_profile"
    style="@style/backgroundMain"
    tools:context=".features.profileTab.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/layoutMatchMatch">

        <LinearLayout
            android:id="@+id/linearLayout3"
            style="@style/layoutMatchWrapVertical"
            android:padding="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/userNameAnc"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/userNameReal"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:textFontWeight="100"
                    android:text="@string/user_name" />
            </LinearLayout>

            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/fullNameAnc"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/fullEmailReal"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:textFontWeight="100"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/IdAnchor"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/student_id" />

                <TextView
                    android:id="@+id/IdReal"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:textFontWeight="100"
                    android:text="@string/id" />
            </LinearLayout>

            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/sessionAnchor"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/session" />

                <TextView
                    android:id="@+id/sessionReal"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:textFontWeight="100"
                    android:text="@string/admission_session" />
            </LinearLayout>

            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/departmentAnchor"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/department" />

                <TextView
                    android:id="@+id/departmentReal"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:textFontWeight="100"
                    android:text="@string/department" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/sectionLayout"
                style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/sectionAnchor"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/section" />

                <TextView
                    android:id="@+id/sectionReal"
                    android:paddingRight="@dimen/_30sdp"
                    android:textFontWeight="600"
                    style="@style/textViewWrapWrapPoppinsBlack20" />

                <Button
                    android:id="@+id/btn_update_section"
                    style="@style/buttonStylePopup"
                    android:backgroundTint="@color/custom_green_light"
                    android:drawableStart="@drawable/ic_baseline_add_circle_outline_24"
                    android:text="@string/update" />

            </LinearLayout>


            <LinearLayout style="@style/layoutMatchWrapHorizontal">

                <TextView
                    android:id="@+id/semesterAnchor"
                    style="@style/textViewWrapWrapPoppinsBlack20"
                    android:layout_margin="10dp"
                    android:text="@string/semester" />

                <TextView
                    android:id="@+id/semesterReal"
                    android:textFontWeight="100"
                    style="@style/textViewWrapWrapPoppinsBlack20" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_update_semester"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/wrapWrapPrimaryElevatedButtonWithPadding"
                android:text="@string/update_semester" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>